--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,16 @@ ul li {
   margin: 5px;
 }
 
-#output-index {
+.pink {
+  color: pink;
+}
+
+.blue {
+  color: blue;
+}
+
+#ciao {
+  font-size: 25px;
   font-weight: bold;
-  font-size: 24px;
-  margin-left: 10px;
+  display: none;
 }
